fixed commenter author not showing in comments

--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -96,9 +96,12 @@ img {
 }
 
 .mainInfo {
+	display: flex;
+	flex-direction: column;
 	border: 2px solid var(--borders);
 	padding: 1em 0.5em;
 	border-radius: 0.5em;
+	gap: 0.5em;
 }
 
 .mainInfo img {
@@ -111,8 +114,8 @@ img {
 #postInfo {
 	display: flex;
 	flex-direction: column;
-	gap: .7em;
-	margin-left: .2em;
+	gap: 0.7em;
+	margin-left: 0.2em;
 }
 
 #newCommentForm {
@@ -129,7 +132,7 @@ img {
 	border: 1px solid var(--borders);
 	background: var(--background);
 	color: var(--text);
-	border-radius: 0.5rem 0 0 .5em;
+	border-radius: 0.5rem 0 0 0.5em;
 }
 
 #newCommentButton {
@@ -138,7 +141,7 @@ img {
 	border: 1px solid var(--borders);
 	background-color: var(--background);
 	color: var(--text);
-	border-radius: 0 0.5rem .5em 0;
+	border-radius: 0 0.5rem 0.5em 0;
 	cursor: pointer;
 }
 
